shortcuts: do not grab F10 key

F10 is a standard shortcut to open menu but it cannot be used in a
terminal because many console applications are using it too.

Updating burger menu shortcut: F10 -> Shift+F10

Also move burgermenu initialization after main window. It is needed
to call correctStandardShortcuts() once.

BUG: 482149